Bug 431257 - Can't access annotation editor after taking screenshot using shortcut
Summary: Can't access annotation editor after taking screenshot using shortcut
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 20.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords: usability
: 430480 433222 439688 444436 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-01-07 10:28 UTC by medin
Modified: 2021-12-13 21:23 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04
Sentry Crash Report:


Attachments
Can't access annotation editor (134.28 KB, image/png)
2021-01-07 10:28 UTC, medin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2021-01-07 10:28:26 UTC
Created attachment 134632 [details]
Can't access annotation editor

When I take a screenshot using a shortcut, there is no entry in the contextual menu to access annotation editor. See attached image for more info.

Operating System: Manjaro Linux
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Kernel Version: 5.10.2-2-MANJARO
OS Type: 64-bit
Comment 1 Nate Graham 2021-01-07 17:36:59 UTC
Yeah, this is a bit annoying.
Comment 2 Nate Graham 2021-02-19 18:14:49 UTC
*** Bug 433222 has been marked as a duplicate of this bug. ***
Comment 3 Alex 2021-03-21 10:12:53 UTC
I would like to be able to open any image in the Spectacle annotation editor, not just the screenshots I've made using a shortcut.
Comment 4 witchhunter 2021-05-06 16:16:01 UTC
@Alex
Exactly, or even better: implement annotations into Gwenview or Showfoto.
Comment 5 Bug Janitor Service 2021-05-07 11:12:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/68
Comment 6 Nate Graham 2021-07-30 22:27:32 UTC
*** Bug 439688 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2021-10-28 16:04:28 UTC
*** Bug 444436 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2021-12-02 18:14:02 UTC
Git commit 03026df2adbe589228c81e5a8a7b0ed5c87eeba3 by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 02/12/2021 at 18:13.
Pushed by ngraham into branch 'master'.

Add feature to annotate existing screenshots

Can be accessed:
* Using a button in the notification, if saved to file
* From the new CLI flag `--edit-existing <file>`
FIXED-IN: 22.04

M  +1    -0    dbus/app-org.kde.spectacle.service.in
M  +4    -1    src/Gui/KSMainWindow.cpp
M  +1    -1    src/Gui/KSMainWindow.h
M  +50   -18   src/SpectacleCore.cpp
M  +2    -0    src/SpectacleCore.h

https://invent.kde.org/graphics/spectacle/commit/03026df2adbe589228c81e5a8a7b0ed5c87eeba3
Comment 9 Nate Graham 2021-12-13 21:23:48 UTC
*** Bug 430480 has been marked as a duplicate of this bug. ***