Add feature to annotate existing screenshots

Can be accessed:
* Using a button in the notification, if saved to file
* From the new CLI flag `--edit-existing <file>`

BUG: 431257
FIXED-IN: 22.04